--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "dependencies": {
-    "three": "^0.165.0"
+  "scripts": {
+    "dev": "vite"
   },
   "devDependencies": {
-    "vite": "^5.2.12"
+    "vite": "^5.2.13"
+  },
+  "dependencies": {
+    "three": "^0.165.0"
   }
 }
